1，增加更多hack